Some text overflows corrected and bugs on restarting quiz corrected

--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ button {
 .quizz-title span, .question-header, .question-item p, .quizz div {
     text-align: center;
     overflow-x: auto; 
-    overflow-y: hidden;
+    overflow-y: auto;
 }
 
 .question {
@@ -224,6 +224,7 @@ button {
 .question-item p {
     margin: 9px 0 18.61px 0;
     width: 329.91px;
+    height: 34px;
 }
 
 .correct-item {
@@ -257,6 +258,7 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: auto;
 }
 
 .result-container {
@@ -276,6 +278,8 @@ button {
     line-height: 25px;
     color:#484848;
     margin-right: 14px;
+    width: 328px;
+    height: 250px;
 }
 
 .container-buttons {
@@ -438,6 +442,10 @@ button {
     transition: 0.6s ease-out;
 }
 
+.info-question {
+    margin-top: 12px;
+}
+
 @media (max-width: 1100px) {
     
     .container-user-quizzes {
@@ -528,6 +536,8 @@ button {
     .result-container {
         display: block;
         margin-top: 9px;
+        width: 100%;
+        height: 96px;
     }
 
     .result-container img {
